--- a/024262O/index.html
+++ b/024262O/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Carnet de amistad</title>
+    <title>Carnet de amor</title>
 
     <style>
 
@@ -180,20 +180,21 @@
 
     <div class="Billete Delantero" style="transform: rotateY(0deg);">
         <div class="Cabecera">
-            <p style="text-align: left;">  Carnet de Amistad</p>
+            <p style="text-align: left;">  Carnet de Amor</p>
         </div>
         <div class="Contenido">
-            <p style="text-align: right;position: absolute;top: var(--Tam);left: calc( 2 * var(--Tam) );"><b>Nombre:</b> Carlos Jiménez Gómez</p>
-            <p style="text-align: right;position: absolute;top: calc( 6 * var(--Tam) );left: calc( 2 * var(--Tam) );"><b>Nacimiento:</b> 05/02/2006</p>
-            <p style="text-align: right;position: absolute;top: calc( 6 * var(--Tam) );left: calc( 32.5 * var(--Tam) );"><b>Sexo:</b> H</p>
-            <p style="text-align: right;position: absolute;top: calc( 11 * var(--Tam) );left: calc( 2 * var(--Tam) );"><b>CD:</b> Altura y fuerza descomunal</p>
+            <p style="text-align: right;position: absolute;top: var(--Tam);left: calc( 2 * var(--Tam) );"><b>Nombre:</b> Maricarmen Miranda Sánchez</p>
+            <p style="text-align: right;position: absolute;top: calc( 6 * var(--Tam) );left: calc( 2 * var(--Tam) );"><b>Nacimiento:</b> 16/08/2009</p>
+            <p style="text-align: right;position: absolute;top: calc( 6 * var(--Tam) );left: calc( 32.5 * var(--Tam) );"><b>Sexo:</b> M</p>
+            <p style="text-align: right;position: absolute;top: calc( 11 * var(--Tam) );left: calc( 2 * var(--Tam) );"><b>CD:</b> Belleza innata</p>
             <p style="text-align: right;position: absolute;top: calc( 16 * var(--Tam) );left: calc( 2 * var(--Tam) );"><b>Emisión:</b> 14/02/2024</p>
             <p style="text-align: right;position: absolute;top: calc( 16 * var(--Tam) );left: calc( 28 * var(--Tam) );"><b>Nacionalidad:</b> ESP</p>
             <p style="text-align: right;position: absolute;top: calc( 21 * var(--Tam) );left: calc( 2 * var(--Tam) );"><b>Caducidad:</b> 14/02/2124</p>
-            <p style="text-align: right;position: absolute;top: calc( 21 * var(--Tam) );left: calc( 31 * var(--Tam) );"><b>DPA:</b> #013159R</p>
+            <p style="text-align: right;position: absolute;top: calc( 21 * var(--Tam) );left: calc( 31 * var(--Tam) );"><b>DPA:</b> #024262O</p>
             <img src="QR.png" alt="">
-            <img src="../Amistad.jpg" alt="">
+            <img src="../Amor.avif" alt="">
             <img src="Codigo.png" alt="">
+            <!-- <p style="width: 52%;margin: 38% auto;position: relative;line-break: anywhere;font-family: monospace;font-size: 1.4rem;">4D6172692C20717565207365706173207175652074652071756965726F206D7563686F207920717565207369656D70726520746520766F792061206C6C6576617220656E20656C20636F72617A6F6E2E</p> -->
         </div>
     </div>
 
