--- a/024262O/index.html
+++ b/024262O/index.html
@@ -63,10 +63,10 @@
         }
 
         div.Cabecera {
-            --c11: #59c1ff;
-            --c12: #a8dfff;
-            --c21: #6db8ff;
-            --c22: #4ba8ff;
+            --c11: #d359ff;
+            --c12: #f8a8ff;
+            --c21: #c46dff;
+            --c22: #ad4bff;
 
             width: 100%;
             height: 20%;
