--- a/024262O/index.html
+++ b/024262O/index.html
@@ -204,7 +204,7 @@
 
     <div class="Billete Trasero" style="transform: rotateY(270deg);">
         <div class="Cabecera">
-            <p>Carnet de Amistad</p>
+            <p>Carnet de Amor</p>
         </div>
     </div>
 
